# hell

./: .gitignore  README.md  flake.nix  fourmolu.yaml  hell.cabal
app/: Main.hs  Parser.hs  Shell.hs  Types.hs  Util.hs
